[package]
name = "gtk"
version = "0.0.4"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"

description = "Rust bindings for the GTK+ library"
repository = "https://github.com/gtk-rs/gtk"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/gtk/"

readme = "README.md"

keywords = ["gtk", "gtk-rs", "gnome", "GUI"]

[lib]
name = "gtk"

[dependencies.gtk-sys]
path = "gtk-sys"
version = "0.2.0"

[dependencies]
cairo-rs = "0.0.5"
cairo-sys-rs = "0.2.0"
gdk-pixbuf-sys = "0.2.0"
gdk = "0.1.2"
gdk-sys = "0.2.0"
gio-sys = "0.2.0"
glib = "0.0.4"
glib-sys = "0.2.0"
gobject-sys = "0.2.0"
libc = "0.1"
pango = "0.0.4"
pango-sys = "0.2.0"
