[package]
name = "gtk"
version = "0.0.6"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"

description = "Rust bindings for the GTK+ library"
repository = "https://github.com/gtk-rs/gtk"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/gtk/"

readme = "README.md"

keywords = ["gtk", "gtk-rs", "gnome", "GUI"]

[lib]
name = "gtk"

[dependencies]
cairo-rs = "0.0.7"
cairo-sys-rs = "0.2.1"
gdk-pixbuf-sys = "0.2.1"
gdk = "0.2.0"
gdk-sys = "0.2.1"
gio-sys = "0.2.1"
glib = "0.0.7"
glib-sys = "0.2.1"
gobject-sys = "0.2.1"
libc = "0.1"
pango = "0.0.6"
pango-sys = "0.2.1"
