[package]
name = "rgtk-examples"
version = "0.0.1"
authors = []

[dependencies.gtk]
path = ".."

[dependencies.gdk]
git = "https://github.com/rust-gnome/gdk"

[dependencies.glib]
git = "https://github.com/rust-gnome/glib"

[dependencies.cairo]
git = "https://github.com/rust-gnome/cairo"

[features]
default = ["gtk/gtk_3_14"]

[[bin]]
name = "test_flow_box"

