[package]
name = "gtk-sys"
version = "0.1.3"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "gtk"

description = "FFI bindings to GTK+ 3"
repository = "https://github.com/gtk-rs/gtk"
license = "MIT"
homepage = "https://github.com/gtk-rs/gtk"
documentation = "https://github.com/gtk-rs/gtk"

[lib]
name = "gtk_sys"

[dependencies]
atk-sys = "0.2.0"
bitflags = "0.3"
cairo-sys-rs = "0.2.0"
gdk-pixbuf-sys = "0.2.0"
gdk-sys = "0.2.0"
gio-sys = "0.2.0"
glib-sys = "0.2.0"
gobject-sys = "0.2.0"
libc = "0.1"
pango-sys = "0.2.0"

[build-dependencies]
gcc = "=0.3.9"
pkg-config = "0.3.5"
