[package]
name = "gtk-sys"
version = "0.2.1"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "gtk"

description = "FFI bindings to GTK+ 3"
repository = "https://github.com/gtk-rs/gtk"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/gtk_sys/"
keywords = ["gtk", "gtk-rs", "gnome", "GUI"]

[lib]
name = "gtk_sys"

[dependencies]
atk-sys = "0.2.1"
bitflags = "0.3"
cairo-sys-rs = "0.2.1"
gdk-pixbuf-sys = "0.2.1"
gdk-sys = "0.2.1"
gio-sys = "0.2.1"
glib-sys = "0.2.1"
gobject-sys = "0.2.1"
libc = "0.1"
pango-sys = "0.2.1"

[build-dependencies]
gcc = "~0.3.9"
pkg-config = "0.3.5"
